--- a/helpmenu.html
+++ b/helpmenu.html
@@ -60,40 +60,47 @@
                     </div>
                 </a>
             </div>
-            <!-- phone options -->
             <div id="menu">
-                <a href="newdriver.html">
+                <a href="help.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
-                    <div id="homeMenu">
-                        Home
+                        <div id="homeMenu">
+                            Home
+                        </div>
+                    </a>
+                    <div id="Nav">
+                            Help
                     </div>
-                </a>
-                <div id="Nav">
-                        New Driver
+            </div>
+
+            <!-- In here are the phone screen settings -->
+            <!-- this is the quadrents for the new driver -->
+            <div>
+                    <p>
+                        About this App
+                    </p>
+                    </br>
+                    <p class="newDriver">
+                        Widget Destriptions
+                    </p>
+                    <p class="newDriver_h2">To use: Navigate with the setting menu.</p>
+                    <p class="newDriver_h3">Camera: Keeps logs of everything that happens while behind the wheel.<br>
+                                            Diagnostics: This will allow you to identify any errors your car may be having for easier resolution<br>
+                                            Weather: Plan a trip before you go. Check the weather forcast at home and at your desitination<br>
+                                            HVAC and Seats: Hot or cold outside? Seat a little stiff? Fix it here!<br>
+                                            Radio and CD: Want to listen to the newest hit single, or a classic? This is the radio and CD controls<br>
+                                            Driver Mode: Eager to get the most out of your drive. Yuo know best. Modify the preformance here.<br>
+                    </p>
+                    <p class="newDriver_h3">Please practice hands free driving while using this, and any application.
+                                            In order to make this app more driver friendly,
+                                             voice and gesture cotrols have been programmed into it and are fully customizable.
+                                            The home screen can be customized to provide quick access to widgets used daily.</p>
+                    
                 </div>
             </div>
-            <a href="newDriver.html">
-                <div id="newDriver_topLeft">
-                    Road Rules
-                </div>
-                <div id="newDriver_topRight">
-                    Signs
-                    </br>
-                    <img src="image/signs.png"  height="80%">
-                </div>
-                <div id="newDriver_botLeft">
-                    <p>Vehicle #001</p>
-                    <p> Number: ZS1 F20</p>
-                </div>
-                <div id="newDriver_botRight">
-                    What to do if you get pulled over
-                </div>
-                </a>
-        </div>
-    </body>
-    <footer>
-
-    </footer>
-</html>
+        </body>
+        <footer>
+    
+        </footer>
+    </html>
