--- a/moreMenu.html
+++ b/moreMenu.html
@@ -60,37 +60,55 @@
                     </div>
                 </a>
             </div>
-            <!-- phone options -->
             <div id="menu">
-                <a href="newdriver.html">
+                <a href="more.html">
                     <img src="image/menu.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
-                    <div id="homeMenu">
-                        Home
+                        <div id="homeMenu">
+                            Home
+                        </div>
+                    </a>
+                    <div id="Nav">
+                            More Options
                     </div>
-                </a>
-                <div id="Nav">
-                        New Driver
-                </div>
             </div>
+
+            <!-- In here are the phone screen settings -->
+            <!-- this is the quadrents for the new driver -->
             <a href="newDriver.html">
-                <div id="newDriver_topLeft">
-                    Road Rules
-                </div>
-                <div id="newDriver_topRight">
-                    Signs
-                    </br>
-                    <img src="image/signs.png"  height="80%">
-                </div>
-                <div id="newDriver_botLeft">
-                    <p>Vehicle #001</p>
-                    <p> Number: ZS1 F20</p>
-                </div>
-                <div id="newDriver_botRight">
-                    What to do if you get pulled over
-                </div>
-                </a>
+                    <img src="image/moreOptionDriver.jpg" style="position: absolute; margin:5% auto;height:30%; z-index:-1;">
+
+                <p class=newDriver style="position:absolute; top:35%;left:2%;">
+                    New Driver
+                </p>
+            </a>
+            <a href="fleet-diags.html">
+                    <img src="image/moreOptionFleet.png" style="position:absolute; margin:5% auto; left:30%;height:30%;">
+
+                <p class=newDriver style="position:absolute; top:35%;left:40%">
+                    Fleet
+                </p>
+            </a>
+            <a href="face-recognition.html">
+                    <img src="image/moreOptionface.png" style="position: absolute; top:11%; left:72%;height:25%;">
+                <p class=newDriver style="position:absolute; top:35%;left:63%">
+                    Facial Recognition
+                </p>
+            </a>
+            <div style="position: absolute; top:50%;">
+                    <p class="newDriver_h3">
+                            New Driver: Options to help new or inexperiance drivers. </p>
+                            <p class="newDriver_h3">
+                            Fleet: Have more than one car? <br>This option will allow you to manage them all at once. </p>
+                            <p class="newDriver_h3">
+                            Facial Recognition: Configure Facial Recognition.
+                            This will run automatically when you attempt to start your car, preventing unauthorized users from stealing your wheels.<br>
+                        </p>
+                        <p class="newDriver_h3">Disclaimer:  This app is not intended for use by the driver while in motion. 
+                                Please take the opportunity at home to customize the home screen.  </p>
+
+            </div>
         </div>
     </body>
     <footer>
