--- a/traffic.html
+++ b/traffic.html
@@ -36,13 +36,13 @@
                 </p>
                 <p class="trafficSubTitle" style="text-align: center;">
                     California Licence Plate: 
-                <p class="trafficSubTitle" style="text-align: center; color: blue">
+                <p class="trafficSubTitle" style="text-align: center; color: red">
                     5LCR908
                 </p>
                 <p class="trafficSubTitle" style="text-align: center;">
                     If you see this vehicle, please call the police at
                 </p>
-                <p class="trafficSubTitle" style="text-align: center; color: blue">
+                <p class="trafficSubTitle" style="text-align: center; color: red">
                         (618) 555-COPS
                 </p>
             </div>
