--- a/cameraMenu.html
+++ b/cameraMenu.html
@@ -15,76 +15,56 @@
 <body>
     <div id="phone-camera">
         <div id="menu_button">
-                <a class="menu" href="camera.html">
-                    <div id="menu_box_1">
-                        Camera
-                    </div>
-                </a>
-                <a class="menu" href="camera-logs.html">
-                    <div id="menu_box_2">
-                        Camera Logs
-                    </div>
-                </a>
-                <a class="menu" href="diagnostics.html">
-                    <div id="menu_box_3">
-                        Diagnostics
-                    </div>
-                </a>
-                <a class="menu" href="face-recognition.html">
-                    <div id="menu_box_4">
-                        Facial Recognition
-                    </div>
-                </a>
-                <a class="menu" href="radio.html">
-                    <div id="menu_box_5">
-                        Radio
-                    </div>
-                </a>
-                <a class="menu" href="cd.html">
-                    <div id="menu_box_6">
-                        CD
-                    </div>
-                </a>
-                <a class="menu" href="maps.html">
-                    <div id="menu_box_7">
-                        Maps
-                    </div>
-                </a>
-                <a class="menu" href="traffic.html">
-                    <div id="menu_box_8">
-                        Traffic Alerts
-                    </div>
-                </a>
-                <a class="menu" href="newDriver.html">
-                    <div id="menu_box_9">
-                        New Driver
-                    </div>
-                </a>
-                <a class="menu" href="hvAndSeats.html">
-                    <div id="menu_box_10">
-                        HVAC & Seats
-                    </div>
-                </a>
-                <a class="menu" href="weather.html">
-                    <div id="menu_box_11">
-                        Weather
-                    </div>
-                </a>
-                <a class="menu" href="gestureAndVoice.html">
-                    <div id="menu_box_12">
-                        Gesture & Voice
-                    </div>
-                </a>
-                <a class="menu" href="driverMode.html">
-                    <div id="menu_box_13">
-                        Driver Mode
-                    </div>
-                </a>
-                <a class="menu" href="fleet-diags.html">
-                    <div id="menu_box_14">
-                        Fleet
-                    </div>
-                </a>
+            <a class="menu" href="camera.html">
+                <div id="menu_box_1">
+                    Camera
+                </div>
+            </a>
+            <a class="menu" href="diagnostics.html">
+                <div id="menu_box_3">
+                 Diagnostics
+                </div>
+            </a>
+            <a class="menu" href="radio.html">
+                <div id="menu_box_5">
+                    Radio
+                </div>
+            </a>
+            <a class="menu" href="maps.html">
+                <div id="menu_box_7">
+                    Maps
+                </div>
+            </a>
+            <a class="menu" href="traffic.html">
+                <div id="menu_box_8">
+                    Traffic Alerts
+                </div>
+            </a>
+            <a class="menu" href="driverMode.html">
+                <div id="menu_box_6">
+                    Driver Mode
+                </div>
+            </a>
+            <a class="menu" href="hvAndSeats.html">
+                <div id="menu_box_2">
+                    HVAC & Seats
+                </div>
+            </a>
+            <a class="menu" href="weather.html">
+                <div id="menu_box_4">
+                    Weather
+                </div>
+            </a>
+            <a class="menu" href="help.html">
+                <div id="menu_box_10">
+                    Help
+                </div>
+            </a>
+            <a class="menu" href="more.html">
+                <div id="menu_box_13">
+                    More
+                </div>
+            </a>
         </div>
         <!-- In here are the phone screen settings -->
         <div id="menu">
