--- a/help.html
+++ b/help.html
@@ -11,7 +11,7 @@
 
             <div id="menu">
                 <a href="helpMenu.html">
-                    <img src="image/menu.png" alt="Menu Icon" height="100%">
+                    <img src="image/menu-new.png" alt="Menu Icon" height="100%">
                 </a>
                 <a class="menu" href="landing.html">
                     <div id="homeMenu">
