added background and border around images

--- a/moreMenu.html
+++ b/moreMenu.html
@@ -77,21 +77,21 @@
             <!-- In here are the phone screen settings -->
             <!-- this is the quadrents for the new driver -->
             <a href="newDriver.html">
-                    <img src="image/moreOptionDriver.jpg" style="position: absolute; margin:5% auto;height:30%; z-index:-1;">
+                    <img src="image/moreOptionDriver.jpg" style="background-color:white; border-style: solid; border-color:black; position: absolute; margin:5% auto;height:30%; z-index:-1;">
 
                 <p class=newDriver style="position:absolute; top:35%;left:2%;">
                     New Driver
                 </p>
             </a>
             <a href="fleet-diags.html">
-                    <img src="image/moreOptionFleet.png" style="position:absolute; margin:5% auto; left:30%;height:30%;">
+                    <img src="image/moreOptionFleet.png" style="background-color:white; border-style: solid; border-color:black; position:absolute; margin:5% auto; left:30%;height:30%;">
 
                 <p class=newDriver style="position:absolute; top:35%;left:40%">
                     Fleet
                 </p>
             </a>
             <a href="face-recognition.html">
-                    <img src="image/moreOptionface.png" style="position: absolute; top:11%; left:72%;height:25%;">
+                    <img src="image/moreOptionface.png" style="background-color:white; border-style: solid; border-color:black; position: absolute; top:11%; left:72%;height:25%;">
                 <p class=newDriver style="position:absolute; top:35%;left:63%">
                     Facial Recognition
                 </p>
