Made interfaces instead of pictures, tweaked sizing

--- a/diagnostics.html
+++ b/diagnostics.html
@@ -20,13 +20,22 @@
                 </div>
             </div>
             <div id="diag">
-                <a>
-                    <img src="image/diag.PNG" alt="Diagnostics" height="100%">
-                </a>
+                <p>Year: 2007<br>Make: Acura<br>Model: TL<br><br>
+                Tire Pressure(psi):&nbsp;&nbsp;&nbsp;&nbsp;Front left = 34&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                Front right = 36<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                Rear left = 35 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                Rear right = 35<br><br>
+                Fuel level: 85%<br><br>
+                Oil level: 96%<br><br>
+                Oil life: 40%<br><br>
+                Battery voltage: 11.9v<br><br>
+                Electrical system faults: None<br><br>
+                Engine error codes: None
+                </p>
             </div>
             <div id="scanEC">
-                <a href="scanEC.html">
-                <img src="image/scanec.PNG" alt="Scan Error Codes" height="100%">
+                <a href="scanEC.html" style="color:black">
+                Scan Engine Codes
                 </a>
                 <!--<a class="ecButton" href="scanEC.html">
                     <div id="errorCodes">
