--- a/hvAndSeatsMenu.html
+++ b/hvAndSeatsMenu.html
@@ -73,10 +73,68 @@
                     </div>
                 </div>
                 <div id="hvac">
-                        <a>
+                  
+                        <label class="container">A/C: 
+                                <input type="checkbox" checked="checked">
+                                <span class="checkmark"></span>
+                        </label>
+                        &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;
+                        &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;Temp:&nbsp; &nbsp; 71
+                        <i class="arrow up"></i>
+                        <i class="arrow down"></i>
+                        <label class="container"><br><br><br><br>Defroster:
+                                <input type="checkbox">
+                                <span class="checkmark"></span>
+                              </label>
+                              &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;
+                        &nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;Fan Speed:&nbsp; &nbsp; 32%
+                        <!--<a>
                             <img src="image/hvac.PNG" alt="HVAC and Seat Controls" height="100%">
-                        </a>
-                </div>
+                        </a>-->
+                        <br><br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>Driver</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+                        <b>Passenger</b>
+                        <br><br> <label id="seats">Heated Seat:</label>
+                        <label class="radio-inline">
+                                <input type="radio" name="driver" checked>Off
+                              </label>
+                              <label class="radio-inline">
+                                <input type="radio" name="driver">Low
+                              </label>
+                              <label class="radio-inline">
+                                <input type="radio" name="driver">High
+                              </label>
+                              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                              <label class="radio-inline">
+                                    <input type="radio" name="pass" checked>Off
+                                  </label>
+                                  <label class="radio-inline">
+                                    <input type="radio" name="pass">Low
+                                  </label>
+                                  <label class="radio-inline">
+                                    <input type="radio" name="pass">High
+                                  </label>
+        
+                                  <br><br> <label id="seats">Cooled Seat:</label>
+                        <label class="radio-inline">
+                                <input type="radio" name="drivercool" checked>Off
+                              </label>
+                              <label class="radio-inline">
+                                <input type="radio" name="drivercool">Low
+                              </label>
+                              <label class="radio-inline">
+                                <input type="radio" name="drivercool">High
+                              </label>
+                              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                              <label class="radio-inline">
+                                    <input type="radio" name="passcool" checked>Off
+                                  </label>
+                                  <label class="radio-inline">
+                                    <input type="radio" name="passcool">Low
+                                  </label>
+                                  <label class="radio-inline">
+                                    <input type="radio" name="passcool">High
+                                  </label>
+                    </div>
         </div>
 
         <div>
