--- a/scanECMenu.html
+++ b/scanECMenu.html
@@ -72,15 +72,23 @@
                                 Error Codes
                         </div>
                     </div>
-                    <div id="ec_main">
-                            <a>
-                                <img src="image/errorcodes.PNG" alt="Error Codes" height="100%">
-                            </a>
-                    </div>
-            
-        </div>
-
-        <div>
+                    <div id="ec_header"><h2>Scanning Engine Codes . . .</h2></div>
+            <div id="ec_main">
+                    <b>HIGH Severity - Code P1449 -</b> Misfire detected in cylinder 4.<br>
+                    <b>Suggestion:</b> Take your vehicle to a mechanic immediately!<br><br>
+                    <b>Low Severity - Code P1346 -</b> Evap purge valve is faulty.<br>
+                    Emissions may suffer as a result.
+            </div>
+            <div id="backDiag">
+                    <a href="diagnostics.html" style="color:black">
+                    Back
+                    </a>
+                    <!--<a class="ecButton" href="scanEC.html">
+                        <div id="errorCodes">
+                        Scan Error Codes
+                        </div>
+                    </a>-->
+                </div>
             
         </div>
     </body>
