--- a/weatherMenu.html
+++ b/weatherMenu.html
@@ -75,17 +75,17 @@
             </div>
         </div>
         
-            <div id="current"><h3>It's currently<br>75 and sunny</h3></div>
-            <div id="dotw">Mon    Tue    Wed    Thu    Fri    Sat    Sun   </div>
-            <div id="dotw_icons">
-                <img src="image/sun.png" alt="Sunny" height="25%">
-                <img src="image/raincloud.png" alt="Rainy" height="22%">
-                <img src="image/cloud.png" alt="Cloudy" height="20%">
-                <img src="image/sun.png" alt="Sunny" height="25%">
-                <img src="image/sun.png" alt="Sunny" height="25%">
-                <img src="image/sun.png" alt="Sunny" height="25%">
-                <img src="image/raincloud.png" alt="Rainy" height="25%">
-            </div>
+        <div id="current"><h3>It is currently<br>75 and sunny</h3></div>
+        <div id="dotw"><b><u>Mon</u>    <u>Tue</u>    <u>Wed</u>    <u>Thu</u>    <u>Fri</u>    <u>Sat</u>    <u>Sun</u></b></div>
+        <div id="dotw_icons">
+            <img src="image/sun.png" alt="Sunny" height="25%">
+            <img src="image/raincloud.png" alt="Rainy" height="25%">
+            <img src="image/raincloud.png" alt="rainy" height="25%">
+            <img src="image/sun.png" alt="Sunny" height="25%">
+            <img src="image/sun.png" alt="Sunny" height="25%">
+            <img src="image/sun.png" alt="Sunny" height="25%">
+            <img src="image/raincloud.png" alt="Rainy" height="25%">
+        </div>
             <div id="dotw_temps">75    62    69    79    76    82    74</div>
         </div>
 
