Fix gestures and voice controls

--- a/gestureAndVoiceMenu.html
+++ b/gestureAndVoiceMenu.html
@@ -69,13 +69,52 @@
                         </div>
                     </a>
                     <div id="Nav">
-                            Gesture/Voice
+                            Gestures/Voice
                     </div>
                 </div>
                 <div id="gesture">
-                        <img src="image/gesturevoice.PNG" alt="Gesture and Voice Controls" height="100%">
-                            
-                </div>
+                        <b>Voice</b>
+                            <label class="switch">
+                                    <input type="checkbox" checked>
+                                    <span class="slider round"></span>
+                            </label>
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <b>Gestures</b>
+                        <label class="switch">
+                                <input type="checkbox">
+                                <span class="slider round"></span>
+                        </label>
+                        <br><br>
+                        <label class="radio-inline">Male:
+                                <input type="radio" name="gender" checked>
+                        </label>&nbsp;&nbsp;&nbsp;&nbsp;
+                        <label class="radio-inline">Female:
+                                <input type="radio" name="gender">
+                        </label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        &#8635 Volume up
+                        <label class="switch">
+                                <input type="checkbox">
+                                <span class="slider round"></span>
+                        </label>
+                        <br><br><b>Language</b><br>
+                        <label class="radio-inline">English:
+                                <input type="radio" name="language" checked>
+                        </label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+                        &#8634 Volume down 
+                        <label class="switch">
+                                <input type="checkbox">
+                                <span class="slider round"></span>
+                        </label><br>
+                        <label class="radio-inline">Spanish:
+                                <input type="radio" name="language">
+                        </label> <br>
+                        <label class="radio-inline">French:
+                                <input type="radio" name="language">
+                        </label><br>
+                        <label class="radio-inline">German:
+                                <input type="radio" name="language">
+                        </label>  
+                    </div>
         </div>
 
         <div>
