Minor txt change

--- a/driverMode.html
+++ b/driverMode.html
@@ -20,7 +20,7 @@
                     </div>
             </div>
             <div id="modes">
-                Select a driving mode to suit your driving needs. The preselected options have specific<br>settings for Steering weight, Throttle response, Ride comfort, and traction control.
+                Select a driving mode to suit your driving needs. The preselected options have specific<br>settings for steering weight, throttle response, ride comfort, and traction control.
                 <div id="mode1">Normal</div>
                 <div id="mode2">Comfort</div>
                 <div id="mode3">Sport</div>
