--- a/radio.html
+++ b/radio.html
@@ -26,7 +26,8 @@
                 <img src="image/radio.png" width="70%" style="position:absolute; top:60%;padding-right:1.5%;left:8%;";>
                 <img src="image/presets.png" width="70%" style="position:absolute; left:8%;
                                                                 padding-right:1.5%;">
-                <img src="image/volumeRadio.png" height="100%" style="position:absolute;right:2%;">
+                <img src="image/volumeRadio.png" height="100%" style="position:absolute;right:5%;top:5%;">
+                <h1 style="size:2rem; position: absolute; top:100%; right: 10%;">Volume</h1>
                 
             </div>
             <div id="home_bottom" style="line-height: 2rem;
@@ -34,7 +35,7 @@
                                         text-align: left;
                                         font-size: 3rem;
                                         font-family: 'Arial Black';">
-                    <h2>Source</h2>
+                    <h2 style="border-top:1px solid; margin-top:3rem;padding-top:1rem;">Source</h2>
                     <div style="line-height: 1rem;
                     vertical-align: center;
                     text-align: center;
@@ -47,12 +48,13 @@
                             <input type="radio" id="aux"
                                    name="drone" value="aux" style="height:2rem;"/>
                             <label for="aux">Aux</label>
-
-                            <input type="radio" id="CD"
-                                   name="drone" value="CD" style="height:2rem;"/>
-                            <label for="cd">CD</label>
+                            <a href="cd.html">
+                                <input type="radio" id="CD"
+                                    name="drone" value="CD" style="height:2rem;"/>
+                                <label for="cd">CD</label>
+                            </a>
                         </div>
-                        <img src="image/cd.jpg" height="50%" style="position:absolute; right:2%;top:20%;right:10%;">
+                        <img src="image/cd.png" height="50%" style="position:absolute; right:2%;top:30%;right:10%;">
             </div>
         </div>
     </body>
