Fixed misspelling on More, fixed pull-down menu on Facial Recognition

--- a/moreMenu.html
+++ b/moreMenu.html
@@ -98,7 +98,7 @@
             </a>
             <div style="position: absolute; top:50%;">
                     <p class="newDriver_h3">
-                            New Driver: Options to help new or inexperiance drivers. </p>
+                            New Driver: Options to help new or inexperienced drivers. </p>
                             <p class="newDriver_h3">
                             Fleet: Have more than one car? <br>This option will allow you to manage them all at once. </p>
                             <p class="newDriver_h3">
