fixed some menu pages addedlinks to customize and gesture added warning screen resolved other misc issues

--- a/landingWarning.html
+++ b/landingWarning.html
@@ -38,6 +38,16 @@
                     <p style="font-size:2rem;position:absolute; bottom:0%;left:5%;">Radio</p>
                 </a>
             </div>
+        <div id="warning">
+            <p class="warning_p" style="top:15%;line-height:2rem;"><u><br>Please</p>
+            <p class="warning_p" style="top:15%;line-height:3rem;color:red;"><u>DO NOT</p>
+            <p class="warning_p" style="top:15%;line-height:2rem;"><u>use this app while the car is in motion.</u></p>
+            <p class="warning_p" style="position:absolute; top:35%;line-height:3rem;">For your convenience, the home screen is fully cusomizable. <br><br>This allows the driver to always have the visuals they choose available to them, without manipulating the phone while driving.</p>
+            <a href="landing.html">
+                <img src="image/ok.jpg" style="position:absolute; top:70%;margin-left:35%;">
+            </a>
+        </div>
+
         </div>
     </body>
     <footer>
