--- a/landingMenu.html
+++ b/landingMenu.html
@@ -76,15 +76,22 @@
                         </a>
                 </div>
                 <div id="home_left">
-                    <img src="image/map.png" width="100%">
+                    <a href="maps.html">
+                        <img src="image/map.png" width="100%">
+                        <p style="color:black;font-size:2rem;position:absolute; bottom:0%;left:5%;">Maps</p>
+                    </a>
                 </div>
                 <div id="home_right">
+                    <a href="driverMode.html">
                     <img src="image/driverModeLanding.png" width="90%" style="padding-top:10%">
+                    <p style="font-size:2rem; position:absolute; bottom:0%;left:5%;">Driver Mode</p>
+                    </a>
                 </div>
-                <div id="home_bottom">
-                    <img src="image/radio.png" height="90%" style="padding-right:1.5%;">
-                    <img src="image/radioOptions.png" height="90%" >
-                </div>
+                <div id="home_bottom" >
+                    <a href="radio.html">
+                        <img src="image/radio.png" height="90%">
+                        <img src="image/radioOptions.png" height="90%" style="margin-left:2rem;">
+                        <p style="font-size:2rem;position:absolute; bottom:0%;left:5%;">Radio</p>
             </a>
         </div>
 
