Fixed a few minor misspellings, fixed issue with drop down on Camera Logs

--- a/help.html
+++ b/help.html
@@ -30,7 +30,7 @@
                 </p>
                 </br>
                 <p class="newDriver">
-                    Widget Destriptions
+                    Widget Descriptions
                 </p>
                 <p class="newDriver_h2">To use: Navigate with the setting menu.</p>
                 <p class="newDriver_h3">Camera: Keeps logs of everything that happens while behind the wheel.<br>
@@ -38,11 +38,11 @@
                                         Weather: Plan a trip before you go. Check the weather forcast at home and at your desitination<br>
                                         HVAC and Seats: Hot or cold outside? Seat a little stiff? Fix it here!<br>
                                         Radio and CD: Want to listen to the newest hit single, or a classic? This is the radio and CD controls<br>
-                                        Driver Mode: Eager to get the most out of your drive. Yuo know best. Modify the preformance here.<br>
+                                        Driver Mode: Eager to get the most out of your drive? You know best. Modify the preformance here.<br>
                 </p>
                 <p class="newDriver_h3">Please practice hands free driving while using this, and any application.
                                         In order to make this app more driver friendly,
-                                         voice and gesture cotrols have been programmed into it and are fully customizable.
+                                         voice and gesture controls have been programmed into it and are fully customizable.
                                         The home screen can be customized to provide quick access to widgets used daily.</p>
                 
             </div>
