--- a/more.html
+++ b/more.html
@@ -46,7 +46,7 @@
             </a>
             <a href="customize.html">
                 <p class=newDriver style="position:absolute; top:10%;left:15%">
-                    Cusomize
+                    Customize
                 </p>
             </a>
             <div style="position: absolute; top:35%;">
@@ -54,10 +54,10 @@
                     Customize: Edit the home page to better suit your needs.</p>
                     <p class="newDriver_h3">
                 <p class="newDriver_h3">
-                    Gesute/Voice Control: Select the gestures associated with specific actions. </p>
+                    Gesture/Voice Control: Select the gestures associated with specific actions. </p>
                     <p class="newDriver_h3">
                 <p class="newDriver_h3">
-                            New Driver: Options to help new or inexperiance drivers. </p>
+                            New Driver: Options to help new or inexperienced drivers. </p>
                             <p class="newDriver_h3">
                             Fleet: Have more than one car? <br>This option will allow you to manage them all at once. </p>
                             <p class="newDriver_h3">
