Fixed some mispelled words

--- a/moreMenu.html
+++ b/moreMenu.html
@@ -98,7 +98,7 @@
             </a>
             <a href="customize.html">
                 <p class=newDriver style="position:absolute; top:10%;left:15%">
-                    Cusomize
+                    Customize
                 </p>
             </a>
             <div style="position: absolute; top:35%;">
