--- a/help.html
+++ b/help.html
@@ -35,7 +35,7 @@
                 <p class="newDriver_h2">To use: Navigate with the setting menu.</p>
                 <p class="newDriver_h3">Camera: Keeps logs of everything that happens while behind the wheel.<br>
                                         Diagnostics: This will allow you to identify any errors your car may be having for easier resolution<br>
-                                        Weather: Plan a trip before you go. Check the weather forcast at home and at your desitination<br>
+                                        Weather: Plan a trip before you go. Check the weather forecast at home and at your desitination<br>
                                         HVAC and Seats: Hot or cold outside? Seat a little stiff? Fix it here!<br>
                                         Radio and CD: Want to listen to the newest hit single, or a classic? This is the radio and CD controls<br>
                                         Driver Mode: Eager to get the most out of your drive. Yuo know best. Modify the preformance here.<br>
