Changed name of Camera link in drop down to Dashcam per suggestion made by interview subject in first interview

--- a/face-recognition-successfulMenu.html
+++ b/face-recognition-successfulMenu.html
@@ -18,7 +18,7 @@
         <div id="menu_button">
             <a class="menu" href="camera.html">
                 <div id="menu_box_1">
-                    Camera
+                    Dashcam
                 </div>
             </a>
             <a class="menu" href="diagnostics.html">
