--- a/camera.html
+++ b/camera.html
@@ -25,7 +25,7 @@
                     </div>
             </a>
             <div id="Nav">
-                    Camera
+                    DashCam
             </div>
             <a href="camera-logs.html" class="cameralogbtn">Camera Logs</a>
         </div>
