--- a/cameraMenu.html
+++ b/cameraMenu.html
@@ -77,7 +77,7 @@
                     </div>
             </a>
             <div id="Nav">
-                    Camera
+                    DashCam
             </div>
             <a href="camera-logs.html" class="cameralogbtn">Camera Logs</a>
         </div>
